--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
 
 footer{
+  z-index: 10000;
   position: fixed;
   bottom: 0;
   max-width: 393px;
-  width: 100%;
+  width: 100%; height: 25px;
   .foot{
     nav{
       width: 100%;
@@ -42,7 +43,7 @@ footer{
             font-size: 12px;
           }
         }
-        select:nth-of-type(1),select:nth-of-type(2){
+        select{
           margin-right: 10px;
         }
       }
@@ -67,27 +68,68 @@ footer{
       }
       >div:nth-of-type(2){
         margin-left: 20px;
-        h2{}
-        p{font-size: 14px;}
+        h2{
+          font-size: 16px; 
+          background-color: #85afde;
+          padding: 3px;
+        }
+        p{font-size: 12px; line-height: 1.2;}
       }
     }
   }
   .pagenum{
+    width: 220px;
     margin: 0 auto;
-    width: 200px;
     display: inline-block;
     display: flex;
-    justify-content: space-between;
-    button{
+    justify-content: baseline;
+    >button{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0 5px;
+      width: 25px; height: 25px;
     }
   }
 }
 
-.mappage{
-  width: 100%;
-  height: 852px;
-  margin: 0 auto;
-  >div{
-    width: 100%; height: 100%;}
+.writepage{
+  position: relative;
+  padding: 0 20px;
+  margin-top: 10px;
+  .con{
+    >h2{}
+    .ani{
+      margin: 20px 0;
+      >span{
+        background-color: #85afde;
+        border-radius: 30px;
+        font-size: 15px;
+        padding: 5px;
+        margin-right:8px;
+        cursor: pointer;
+      }
+    }
+    .writepop{
+      background-color: #eee294;
+      cursor: pointer;
+      display: inline-block;
+      padding: 10px;
+      border: 1px solid black;
+    }
+  }
+  .pop{
+    position: absolute;
+    top: 0;
+
+    display: none;
+    border: 1px solid black;
+    width: 321px; height: 500px;
+    background-color: #bde3f0;
+  }
+  .pop.active{
+    display: block;
+  }
 }
+
 
